modulo-03-aws-setup/aula07-AWS-Role-and-Terraform-Authentication/vpc.public-subnets.tf
resource "aws_subnet" "public_subnets" {
  count                     = length(var.public_subnets)
  vpc_id                    = aws_vpc.nsse_production_vpc.id
  cidr_block                = var.public_subnets[count.index].cidr_block
  availability_zone         = var.public_subnets[count.index].availability_zone
  map_public_ip_on_launch   = var.public_subnets[count.index].map_public_ip_on_launch
  tags                      = merge({ Name = var.public_subnets[count.index].name }, var.tags)
}
