modulo-03-aws-setup/aula07-AWS-Role-and-Terraform-Authentication/vpc.private-route-tables.tf
resource "aws_route_table" "private_1a" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.us_east_1a.id
  }


    tags = merge({ Name = "nsse-production-vpc-private-route-table-1a" }, var.tags)
  
}

resource "aws_route_table_association" "private_associations_1a" {
  count          = length([for subnet in aws_subnet.privates: subnet.id if subnet.availability_zone == "us-east-1a"])

  subnet_id      = [for subnet in aws_subnet.privates: subnet.id if subnet.availability_zone == "us-east-1a"][0]
  route_table_id = aws_route_table.private_1a.id
}

resource "aws_route_table" "private_1b" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.us_east_1b.id
  }


    tags = merge({ Name = "nsse-production-vpc-private-route-table-1b" }, var.tags)
  
}

resource "aws_route_table_association" "private_association_1b" {
  count          = length([for subnet in aws_subnet.privates: subnet.id if subnet.availability_zone == "us-east-1b"])
  
  subnet_id      = [for subnet in aws_subnet.privates: subnet.id if subnet.availability_zone == "us-east-1b"][0]
  route_table_id = aws_route_table.private_1b.id
}
